[refs #921] Prevent text being cut off in `select`
Prevents text being vertically cut off when using large font sizes, by
removing the required height of 40px.

--- a/packages/components/select/_select.scss
+++ b/packages/components/select/_select.scss
@@ -7,7 +7,6 @@
 
   border: $nhsuk-border-width-form-element solid $nhsuk-form-border-color;
   box-sizing: border-box;
-  height: 40px;
   max-width: 100%;
   padding: nhsuk-spacing(1);
 
